zg 10.02.2023 15:13:13 +0200 - build 118

1. forum: ralt+shift+f3 didn't work.

drkns 10.11.2022 17:40:00 +0000 - build 117

1. Add GUID to "Save file list" dialog.

drkns 09.11.2022 19:37:38 +0000 - build 116

1. Populate reparse point types.

drkns 04.08.2022 23:33:39 +0100 - build 115

1. gh-538: Frequent Crashes in Temp Panel after Find Results

drkns 02.08.2022 22:48:02 +0100 - build 114

1. Fix crashes.

drkns 02.08.2022 21:06:08 +0100 - build 113

1. gh-537: Saved content to a list file contains null termination character.

drkns 13.07.2022 22:24:34 +0100 - build 112

1. Typo in 111.

drkns 26.12.2021 23:48:07 +0000 - build 111

1. Refactoring.
   After seeing "realloc(N + 1)" and other wonders of this plugin there was no other way but to rewrite it.
   Maybe it will even work better. Or maybe not. Beware of bugs.

shmuel 14.07.2020 07:11:56 +0300 - build 110

1. Исправление 107.1 для общего случая (когда текущий элемент не "..").

shmuel 03.05.2020 15:16:21 +0300 - build 109

1. Не работало копирование имён файлов на панель с другой временной панели.

drkns 23.06.2019 17:18:50 +0100 - build 108

1. В плагине творилось страшное.
   И, наверное, продолжает, но уже немного меньше.

shmuel 29.01.2019 14:11:46 +0200 - build 107

1. При открытии хост-файла, после выхода из панели курсор прыгал на ..

2. В режиме "Меню из файла списка" после закрытия меню выскакивало окошко "Windows can't open this file".

drkns 07.02.2016 01:21:16 +0200 - build 106

1. Плагин зачем-то считал себя умнее пользователя и удалял кавычки из строк в temp-файлах.

zg 20.03.2015 23:41:34 +0200 - build 105

1. Far 3.0 API 4321

shmuel 26.01.2015 16:42:07 +0200 - build 104

1. Уточнение build 87 (в поле ввода диалога сохранения списка файлов
   иногда попадал мусор, или отображалось имя файла с путём \ ).

svs 30.07.2014 17:07:10 +0400

1. Добавлен TmpPanel.ListUTF8.farconfig

svs 29.07.2014 12:05:13 +0400 - build 103

1. Mantis#0000904: Пустое меню файла-списка (*.temp)