@@ -1,3 +1,7 @@
+zg 10.02.2023 15:30:29 +0200 - build 119
+
+1. continue 118.
+
 zg 10.02.2023 15:13:13 +0200 - build 118
 
 1. forum: ralt+shift+f3 didn't work.
